--- a/google-books-search/src/index.css
+++ b/google-books-search/src/index.css
@@ -7,7 +7,66 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+
+button {
+  height: 25px;
+  width: 75px;
+  margin-top: 5px;
+  font-size: .8rem;
+}
+
+
+.list-group-item {
+  /* display: flex;
+  flex-wrap: wrap; */
+  list-style-type: none;
+  border: 1px solid gray;
+  border-radius: 10px;
+  text-align: left;
+  padding: 15px;
+  width: 80%;
+  margin: 10px auto;
+}
+.title_buttons {
+  display: flex;
+  justify-content: space-between;
+}
+.authorInfo {
+  clear: both;
+  display: block;
+  margin-top: -30px;
+}
+h3 {
+  text-align: left;
+  font-size: 1.25rem;
+  line-height: 1.25rem;
+  max-width: 60%;
+  margin-top: 0px;
+}
+
+h4 {
+  text-align: left;
+  font-size: 1rem;
+  line-height: 1rem;
+}
+
+.img-fluid {
+  max-width: 150px;
+  max-height: 200px;
+
+}
+
+p {
+  font-size: 1rem;
+  margin-left: 20px;
+  margin-top: 0px;
+}
+
+.aboutBook {
+  display: flex;
+}
+
+.form-control {
+  width: 200px;
+  font-size: 1rem;
 }
