--- a/google-books-search/src/index.css
+++ b/google-books-search/src/index.css
@@ -7,7 +7,6 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-
 button {
   height: 25px;
   width: 75px;
@@ -16,7 +15,9 @@ button {
   font-size: .8rem;
 }
 
-
+.list-group {
+  margin-top: 60px;
+}
 .list-group-item {
   /* display: flex;
   flex-wrap: wrap; */
@@ -70,4 +71,24 @@ p {
 .form-control {
   width: 200px;
   font-size: 1rem;
+}
+nav.navbar {
+  background: cadetblue;
+  color: white;
+  text-decoration: none;
+  width: 100%;
+  height: 80px;
+  display: flex;
+  justify-content: space-between;
+  top: -1px;
+  position: fixed;
+}
+
+.nav-link {
+  color: white;
+  text-decoration: none;
+  margin: 10px;
+}
+#navbarNav {
+  margin-top: 35px;
 }
